fix(multi/1.16.5): 移植2